--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="pt-br" >
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Aula 9 - Portfólio</title>
@@ -37,6 +37,38 @@
             <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="VwywarJ" data-user="gbrfate" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
               <span>See the Pen <a href="https://codepen.io/gbrfate/pen/VwywarJ">
                   Aluraflix - dia 5</a> by Gabriel (<a href="https://codepen.io/gbrfate">@gbrfate</a>)
+                on <a href="https://codepen.io">CodePen</a>.</span>
+            </p>
+            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <li class="projects-itens">
+            <p>Calculador de Média</p>
+            <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="LYOvXzB" data-user="gbrfate" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+              <span>See the Pen <a href="https://codepen.io/gbrfate/pen/LYOvXzB">
+                  Calculadora de Média - Aula 1</a> by Gabriel (<a href="https://codepen.io/gbrfate">@gbrfate</a>)
+                on <a href="https://codepen.io">CodePen</a>.</span>
+            </p>
+            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <li class="projects-itens">
+            <p>Mentalista</p>
+            <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="qBVzyMp" data-user="gbrfate" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+              <span>See the Pen <a href="https://codepen.io/gbrfate/pen/qBVzyMp">
+                  Aula 3 - Mentalista</a> by Gabriel (<a href="https://codepen.io/gbrfate">@gbrfate</a>)
+                on <a href="https://codepen.io">CodePen</a>.</span>
+            </p>
+            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <li class="projects-itens">
+            <p>Tabela de Classificação</p>
+            <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="qBpEgJJ" data-user="gbrfate" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+              <span>See the Pen <a href="https://codepen.io/gbrfate/pen/qBpEgJJ">
+                  Tabela de classificação</a> by Gabriel (<a href="https://codepen.io/gbrfate">@gbrfate</a>)
+                on <a href="https://codepen.io">CodePen</a>.</span>
+            </p>
+            <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <li class="projects-itens">
+            <p>Super Trunfo</p>
+            <p class="codepen" data-height="300" data-theme-id="dark" data-default-tab="html,result" data-slug-hash="vYpNVQz" data-user="gbrfate" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+              <span>See the Pen <a href="https://codepen.io/gbrfate/pen/vYpNVQz">
+                  Super Trunfo - Dia 8</a> by Gabriel (<a href="https://codepen.io/gbrfate">@gbrfate</a>)
                 on <a href="https://codepen.io">CodePen</a>.</span>
             </p>
             <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
